tests/algorithms/transpiler/CPP/data_structures/binary_tree/is_sorted.error
compile: exit status 1
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/is_sorted.cpp:80:215: warning: multi-character character constant [-Wmultichar]
   80 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/is_sorted.cpp:80:251: warning: multi-character character constant [-Wmultichar]
   80 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/is_sorted.cpp: In function ‘std::vector<double> inorder(const Tree&, int64_t)’:
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/is_sorted.cpp:146:15: error: ‘concat’ was not declared in this scope; did you mean ‘wcsncat’?
  146 |         res = concat(res, inorder(tree, left_idx));
      |               ^~~~~~
      |               wcsncat
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/is_sorted.cpp:151:15: error: ‘concat’ was not declared in this scope; did you mean ‘wcsncat’?
  151 |         res = concat(res, inorder(tree, right_idx));
      |               ^~~~~~
      |               wcsncat
